--- a/src/Rentler.Admin.Web/src/index.html
+++ b/src/Rentler.Admin.Web/src/index.html
@@ -8,10 +8,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+  <link href="https://material.angular.io/styles.3f8897d6d1772b8867fb.bundle.css" rel="stylesheet">
+
 </head>
 <body>
   <app-root>
-    <app-header></app-header>
+   
   </app-root>
 </body>
 </html>
